Fix overflow parameter for dropdown component

--- a/source/stylesheets/refills/_dropdown.scss
+++ b/source/stylesheets/refills/_dropdown.scss
@@ -87,7 +87,7 @@
     cursor: pointer;
     display: none;
     margin: 0;
-    overflow: show;
+    overflow: visible;
     padding: 0;
     position: absolute;
     right: 0;
