--- a/source/stylesheets/refills/unstyled/_dropdown.scss
+++ b/source/stylesheets/refills/unstyled/_dropdown.scss
@@ -27,7 +27,7 @@
   .dropdown-menu {
     cursor: pointer;
     display: none;
-    overflow: show;
+    overflow: visible;
     position: absolute;
     text-align: left;
     top: $dropdown-distance-from-menu;
